--- a/video-gallery.html
+++ b/video-gallery.html
@@ -83,7 +83,7 @@
 
 
     <footer>
-        <a href="https://github.com/Lamer007/Singidunum/tree/main/First%20Year/Web%20Design/FinalProject">&copy; 2023
-            Aleksei Moiseev 2023230211</a>
+        <a href="https://github.com/Lamer007">&copy; 2023
+            Lamer</a>
     </footer>
 </body>
