--- a/location.html
+++ b/location.html
@@ -52,7 +52,7 @@
     </div>
 
     <footer>
-        <a href="https://github.com/Lamer007/Singidunum/tree/main/First%20Year/Web%20Design/FinalProject">&copy; 2023
-            Aleksei Moiseev 2023230211</a>
+        <a href="https://github.com/Lamer007">&copy; 2023
+            Lamer</a>
     </footer>
 </body>
